<resources>
<!--    Used on main game page-->
    <string name="return_to_game">Play!</string>
    <string name="app_name">Rock, Paper, Scissors</string>
    <string name="start_game">GO!</string>
    <string name="no_string"></string>
    <string name="rock_string">ROCK!</string>
    <string name="paper_string">PAPER!</string>
    <string name="scissor_string">SCISSORS!</string>
    <string name="cheer_string">GO</string>
    <string name="opp_intro">YOUR OPPONENT CHOSE:</string>
    <string name="user_intro">YOU CHOSE:</string>
    <string name="win">YOU WIN!</string>
    <string name="lose">YOU LOSE…</string>
    <string name="draw">It\'s a draw.</string>
    <string name="streak">Win Streak: </string>
    <string name="zero_streak">0</string>
    <string name="best">Best Ever:</string>

<!--    Used on how to play-->
    <string name="rules_label">How To Play</string>
    <string name="how_to_play">
        \n1. Press go to start a game.\n\n2. During the countdown:\nDo nothing to choose rock.\nChop with your phone to choose scissors.\nTurn your phone away then back to choose paper.\n\n3. REPEAT!
    </string>

<!--    Used on first time user page-->
    <string name="first_time">You must be new here! Enter the username that will display on the leader board:</string>
    <string name="username_explanation">(username must contain numbers and letters only, and be less than 10 characters)</string>
    <string name="username">username</string>
    <string name="alpha_numeric">aAbBcCdDeEfFgGhHiIjJkKlLmMnNoOpPqQrRsStTuUvVwWxXyYzZ0123456789</string>
    <string name="first_time_play_button">PLAY</string>

<!--    Strings Used on Leader Board-->
    <string name="leader">Leader Board</string>

</resources>
