<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstTimeUserFragment" >

    <TextView
        android:id="@+id/first_time_intro"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/first_time"
        android:textColor="@color/plainBlack"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="@string/alpha_numeric"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="16"
        android:selectAllOnFocus="true"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_explanation"
        android:autofillHints="" />

    <Button
        android:id="@+id/first_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/first_time_play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_box" />

    <TextView
        android:id="@+id/name_explanation"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/username_explanation"
        android:textColor="@color/plainBlack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_time_intro" />
</androidx.constraintlayout.widget.ConstraintLayout>