<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <LinearLayout
        android:id="@+id/win_streak"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/plainBlack"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/best_streak_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/streak_height"
            android:background="@android:color/background_dark"
            android:gravity="center_vertical|end"
            android:text="@string/best"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/best_streak_count"
            android:layout_width="@dimen/streak_num_width"
            android:layout_height="@dimen/streak_height"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:gravity="clip_horizontal|center"
            android:text="@string/zero_streak"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/win_streak_text2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/streak_height"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:gravity="center_vertical|end"
            android:text="@string/streak"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/streak_count"
            android:layout_width="@dimen/streak_num_width"
            android:layout_height="@dimen/streak_height"
            android:background="@android:color/background_dark"
            android:gravity="clip_horizontal|center"
            android:text="@string/zero_streak"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/user_intro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/plainBlack"
        android:gravity="center"
        android:text="@string/user_intro"
        android:textColor="@color/plainWhite"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdown" />

    <TextView
        android:id="@+id/user_move"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_string"
        android:textColor="@color/plainBlack"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_intro" />

    <TextView
        android:id="@+id/opponent_intro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/plainBlack"
        android:gravity="center"
        android:text="@string/opp_intro"
        android:textColor="@color/plainWhite"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_move" />

    <TextView
        android:id="@+id/opponent_choice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_string"
        android:textColor="@color/plainBlack"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opponent_intro" />

    <TextView
        android:id="@+id/result_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_string"
        android:textColor="@color/plainBlack"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opponent_choice" />

    <Button
        android:id="@+id/play_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/countdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_string"
        android:textColor="@color/plainBlack"
        android:textSize="128sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/win_streak" />

</androidx.constraintlayout.widget.ConstraintLayout>